name:            cubical-utils
version:         1.0-dev
cabal-version:   >= 1.10
build-type:      Simple
description:     Helper programs.
license:         MIT
tested-with:     GHC == 8.6.5

executable GenerateEverything
  hs-source-dirs:   .
  main-is:          Everythings.hs
  default-language: Haskell2010
  build-depends:      base      >= 4.9.0.0 && < 4.17
