name:            cubical-utils
version:         1.0
cabal-version:   >= 1.10
build-type:      Simple
description:     Helper programs.
license:         MIT
tested-with:     GHC == 8.6.5

executable Everythings
  hs-source-dirs:   .
  main-is:          Everythings.hs
  default-language: Haskell2010
  build-depends:      base      >= 4.9.0.0 && < 4.20
                    , directory >= 1.0.0.0 && < 1.4
